[package]
name = "cruzbit"
version = "1.0.1"
authors = ["Christian Smith <christian@dhp.com>"]
edition = "2021"
rust-version = "1.70.0"
description = "A simple decentralized peer-to-peer ledger implementation"
readme = "README.md"
homepage = "https://cruzb.it"
repository = "https://github.com/christian-smith/cruzbit"
keywords = ["bitcoin", "crypto"]
categories = ["cryptography::cryptocurrencies"]
license = "MIT"
default-run = "client"

[[bin]]
name = "client"

[[bin]]
name = "wallet"

[dependencies]
argon2 = "0.5"
base64ct = { version = "1.6", features = ["std"] }
bincode = "1.3"
console = "0.16"
cruzbit-leveldb = "1.0"
crypto_secretbox = "0.1"
cuckoofilter = "0.5"
dialoguer = { version = "0.11", features = ["completion"] }
domain = "0.11"
ed25519-compact = "2.1"
env_logger = { version = "0.10", default-features = false, features = ["humantime"] }
faster-hex = { version = "0.10", features = ["serde"] }
futures = { version = "0.3", default-features = false }
getopts = "0.2"
humantime = "2.2"
ibig = "0.3"
igd = "0.12"
irc = { version = "1.0", default-features = false, features = ["tls-rust"] }
log = "0.4"
lz4 = "1.28"
network-interface = "2.0"
num-bigint = "0.4"
rand = { version = "0.9", default-features = false, features = ["std_rng", "thread_rng"] }
rcgen = "0.14"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
sha3 = "0.10"
thiserror = "1.0"
tokio = { version = "1.46", features = ["macros", "net", "rt-multi-thread", "signal", "io-util"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
tempfile = "3.20"

[build-dependencies]
cmake = "0.1"

[features]
cuda = []
opencl = []
